*SVN*

* Added the possibility for adapters to overwrite add_limit! to implement a different limiting scheme than "LIMIT X" used by MySQL, PostgreSQL, and SQLite.

* Fixed that the const_missing autoload assumes the requested constant is set by require_association and calls const_get to retrieve it. 
  If require_association did not set the constant then const_get will call const_missing, resulting in an infinite loop #380 [bitsweat]

* Added the possibility of having objects with acts_as_list created before their scope is available or...


*1.3.0* (December 23, 2004)

* Added a require_association hook on const_missing that makes it possible to use any model class without requiring it first. This makes STI look like:

    before:
      require_association 'person'
      class Employee < Person
      end
    
    after:
      class Employee < Person
      end

  This also reduces the usefulness of Controller.model in Action Pack to currently only being for documentation purposes.      

* Added that Base.update_all and Base.delete_all return an integer of the number of affected rows #341

* Added scope option to validation_uniqueness #349 [Kent Sibilev]

* Added respondence to *_before_type_cast for all attributes to return their string-state before they were type casted by the column type.
  This is helpful for getting "100,000" back on a integer-based validation where the value would normally be "100".

* Added allow_nil options to validates_inclusion_of so that validation is only triggered if the attribute is not nil [what-a-day]

* Added work-around for PostgreSQL and the problem of getting fixtures to be created from id 1 on each test case.
  This only works for auto-incrementing primary keys called "id" for now #359 [Scott Baron]

* Added Base#clear_association_cache to empty all the cached associations #347 [Tobias Luetke]

* Added more informative exceptions in establish_connection #356 [bitsweat]
